TPFinal/obj/scanner.output
Nonterminals useless in grammar

    listaDeclaracion


Terminals unused in grammar

    SIGNED
    UNSIGNED
    SWITCH
    CASE
    DEFAULT
    PALABRARESERVADA
    COMENTARIO
    SIZEOF
    MENOS_MENOS
    MAS_MAS
    IGUALDAD


Rules useless in grammar

   95 listaDeclaracion: %empty
   96                 | declaracion ';' listaDeclaracion


Rules useless in parser due to conflicts

   18 listaDeclaraciones: listaDeclaraciones declaracion

   22 listaSentencias: %empty

   57 tipoDeRetorno: CHAR
   58              | DOUBLE
   59              | FLOAT
   60              | INT
   61              | SHORT


State 1 conflicts: 28 shift/reduce
State 3 conflicts: 2 shift/reduce
State 10 conflicts: 1 reduce/reduce
State 11 conflicts: 1 reduce/reduce
State 12 conflicts: 1 reduce/reduce
State 13 conflicts: 1 reduce/reduce
State 15 conflicts: 1 reduce/reduce
State 19 conflicts: 1 shift/reduce
State 26 conflicts: 28 reduce/reduce
State 27 conflicts: 7 shift/reduce
State 31 conflicts: 1 shift/reduce
State 68 conflicts: 27 shift/reduce, 28 reduce/reduce
State 72 conflicts: 1 reduce/reduce
State 73 conflicts: 1 reduce/reduce
State 104 conflicts: 28 shift/reduce
State 105 conflicts: 28 reduce/reduce
State 126 conflicts: 27 shift/reduce
State 127 conflicts: 27 shift/reduce
State 143 conflicts: 1 reduce/reduce
State 146 conflicts: 1 shift/reduce
State 157 conflicts: 27 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | sentencia '\n'
    5     | sentencia

    6 sentencia: %empty
    7          | sentCompuesta
    8          | sentExpresion
    9          | sentSeleccion
   10          | sentIteracion
   11          | sentSalto
   12          | declaracion
   13          | definicionFuncion
   14          | caracterDeCorte
   15          | error

   16 sentCompuesta: '{' listaDeclaraciones listaSentencias '}'

   17 listaDeclaraciones: declaracion
   18                   | listaDeclaraciones declaracion
   19                   | %empty

   20 listaSentencias: sentencia
   21                | listaSentencias sentencia
   22                | %empty

   23 sentExpresion: expresion ';'
   24              | expAsignacion

   25 sentSeleccion: IF '(' expresion ')' sentencia
   26              | IF '(' expresion ')' sentencia ELSE sentencia

   27 sentIteracion: WHILE '(' expresion ')' sentencia
   28              | DO sentencia WHILE '(' expresion ')' ';'
   29              | FOR '(' expresion ';' expresion ';' expresion ')'

   30 sentSalto: CONTINUE ';'
   31          | BREAK ';'
   32          | RETURN expresion ';'
   33          | GOTO IDENTIFICADOR ';'

   34 declaracion: declaracionVarSimples

   35 declaracionVarSimples: tipoDeDato listaVarSimples ';'
   36                      | tipoDeDato IDENTIFICADOR '(' lista_parametros ')' sentCompuesta
   37                      | error caracterDeCorte

   38 tipoDeDato: CHAR
   39           | DOUBLE
   40           | FLOAT
   41           | INT
   42           | LONG
   43           | SHORT

   44 listaVarSimples: unaVarSimple
   45                | unaVarSimple ',' listaVarSimples
   46                | error

   47 $@1: %empty

   48 unaVarSimple: IDENTIFICADOR $@1 ',' unaVarSimple
   49             | IDENTIFICADOR
   50             | IDENTIFICADOR '=' expresion
   51             | error

   52 definicionFuncion: tipoDeRetorno IDENTIFICADOR '(' lista_parametros ')' sentCompuesta

   53 lista_parametros: parametro ',' lista_parametros
   54                 | parametro
   55                 | %empty

   56 parametro: tipoDeDato IDENTIFICADOR

   57 tipoDeRetorno: CHAR
   58              | DOUBLE
   59              | FLOAT
   60              | INT
   61              | SHORT
   62              | VOID

   63 expAsignacion: IDENTIFICADOR '=' expresion ';'
   64              | IDENTIFICADOR MAS_IGUAL expresion ';'
   65              | IDENTIFICADOR MENOS_IGUAL expresion ';'
   66              | IDENTIFICADOR POR_IGUAL expresion ';'

   67 expresion: expresion OR expresion
   68          | expresion AND expresion
   69          | expresion MAYORIGUAL expresion
   70          | expresion '>' expresion
   71          | expresion MENORIGUAL expresion
   72          | expresion '<' expresion
   73          | expresion DESIGUALDAD expresion
   74          | expresion '+' expresion
   75          | expresion '-' expresion
   76          | expresion '*' expresion
   77          | expresion '/' expresion
   78          | expresion '^' expresion
   79          | expresion '%' expresion
   80          | expPrimaria

   81 expPrimaria: CONST_DEC
   82            | CONST_OCT
   83            | CONST_HEX
   84            | CONST_REAL
   85            | CONST_CARACTER
   86            | LITERAL_CADENA
   87            | IDENTIFICADOR '(' listaArgumentos ')'
   88            | IDENTIFICADOR
   89            | '(' expresion ')'

   90 listaArgumentos: expresion
   91                | listaArgumentos ',' expresion
   92                | %empty

   93 caracterDeCorte: ';'
   94                | '\n'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 94
    '%' (37) 79
    '(' (40) 25 26 27 28 29 36 52 87 89
    ')' (41) 25 26 27 28 29 36 52 87 89
    '*' (42) 76
    '+' (43) 74
    ',' (44) 45 48 53 91
    '-' (45) 75
    '/' (47) 77
    ';' (59) 23 28 29 30 31 32 33 35 63 64 65 66 93
    '<' (60) 72
    '=' (61) 50 63
    '>' (62) 70
    '^' (94) 78
    '{' (123) 16
    '}' (125) 16
    error (256) 15 37 46 51
    LITERAL_CADENA <tkn> (258) 86
    CONST_CARACTER <tkn> (259) 85
    CONST_REAL <tkn> (260) 84
    CONST_HEX <tkn> (261) 83
    CONST_OCT <tkn> (262) 82
    CONST_DEC <tkn> (263) 81
    CHAR (264) 38 57
    DOUBLE (265) 39 58
    FLOAT (266) 40 59
    INT (267) 41 60
    LONG (268) 42
    SHORT (269) 43 61
    VOID (270) 62
    SIGNED (271)
    UNSIGNED (272)
    IF (273) 25 26
    ELSE (274) 26
    WHILE (275) 27 28
    DO (276) 28
    SWITCH (277)
    FOR (278) 29
    CASE (279)
    DEFAULT (280)
    PALABRARESERVADA (281)
    BREAK (282) 31
    RETURN (283) 32
    GOTO (284) 33
    CONTINUE (285) 30
    COMENTARIO (286)
    IDENTIFICADOR <tkn> (287) 33 36 48 49 50 52 56 63 64 65 66 87 88
    SIZEOF (288)
    MENOS_MENOS (289)
    MAS_MAS (290)
    MAS_IGUAL (291) 64
    MENOS_IGUAL (292) 65
    POR_IGUAL (293) 66
    OR (294) 67
    AND (295) 68
    MAYORIGUAL (296) 69
    MENORIGUAL (297) 71
    DESIGUALDAD (298) 73
    IGUALDAD (299)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    input (62)
        on left: 1 2
        on right: 0 2
    line (63)
        on left: 3 4 5
        on right: 2
    sentencia (64)
        on left: 6 7 8 9 10 11 12 13 14 15
        on right: 4 5 20 21 25 26 27 28
    sentCompuesta (65)
        on left: 16
        on right: 7 36 52
    listaDeclaraciones (66)
        on left: 17 18 19
        on right: 16 18
    listaSentencias (67)
        on left: 20 21 22
        on right: 16 21
    sentExpresion (68)
        on left: 23 24
        on right: 8
    sentSeleccion (69)
        on left: 25 26
        on right: 9
    sentIteracion (70)
        on left: 27 28 29
        on right: 10
    sentSalto (71)
        on left: 30 31 32 33
        on right: 11
    declaracion (72)
        on left: 34
        on right: 12 17 18
    declaracionVarSimples (73)
        on left: 35 36 37
        on right: 34
    tipoDeDato (74)
        on left: 38 39 40 41 42 43
        on right: 35 36 56
    listaVarSimples (75)
        on left: 44 45 46
        on right: 35 45
    unaVarSimple (76)
        on left: 48 49 50 51
        on right: 44 45 48
    $@1 (77)
        on left: 47
        on right: 48
    definicionFuncion (78)
        on left: 52
        on right: 13
    lista_parametros (79)
        on left: 53 54 55
        on right: 36 52 53
    parametro (80)
        on left: 56
        on right: 53 54
    tipoDeRetorno (81)
        on left: 57 58 59 60 61 62
        on right: 52
    expAsignacion (82)
        on left: 63 64 65 66
        on right: 24
    expresion (83)
        on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 23 25 26 27 28 29 32 50 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 89 90 91
    expPrimaria (84)
        on left: 81 82 83 84 85 86 87 88 89
        on right: 80
    listaArgumentos (85)
        on left: 90 91 92
        on right: 87 91
    caracterDeCorte (86)
        on left: 93 94
        on right: 14 37


State 0

    0 $accept: . input $end
    1 input: . %empty
    2      | . input line

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line
    3 line: . '\n'
    4     | . sentencia '\n'
    5     | . sentencia
    6 sentencia: . %empty  [$end, error, LITERAL_CADENA, CONST_CARACTER, CONST_REAL, CONST_HEX, CONST_OCT, CONST_DEC, CHAR, DOUBLE, FLOAT, INT, LONG, SHORT, VOID, IF, WHILE, DO, FOR, BREAK, RETURN, GOTO, CONTINUE, IDENTIFICADOR, '\n', '{', ';', '(']
    7          | . sentCompuesta
    8          | . sentExpresion
    9          | . sentSeleccion
   10          | . sentIteracion
   11          | . sentSalto
   12          | . declaracion
   13          | . definicionFuncion
   14          | . caracterDeCorte
   15          | . error
   16 sentCompuesta: . '{' listaDeclaraciones listaSentencias '}'
   23 sentExpresion: . expresion ';'
   24              | . expAsignacion
   25 sentSeleccion: . IF '(' expresion ')' sentencia
   26              | . IF '(' expresion ')' sentencia ELSE sentencia
   27 sentIteracion: . WHILE '(' expresion ')' sentencia
   28              | . DO sentencia WHILE '(' expresion ')' ';'
   29              | . FOR '(' expresion ';' expresion ';' expresion ')'
   30 sentSalto: . CONTINUE ';'
   31          | . BREAK ';'
   32          | . RETURN expresion ';'
   33          | . GOTO IDENTIFICADOR ';'
   34 declaracion: . declaracionVarSimples
   35 declaracionVarSimples: . tipoDeDato listaVarSimples ';'
   36                      | . tipoDeDato IDENTIFICADOR '(' lista_parametros ')' sentCompuesta
   37                      | . error caracterDeCorte
   38 tipoDeDato: . CHAR
   39           | . DOUBLE
   40           | . FLOAT
   41           | . INT
   42           | . LONG
   43           | . SHORT
   52 definicionFuncion: . tipoDeRetorno IDENTIFICADOR '(' lista_parametros ')' sentCompuesta
   57 tipoDeRetorno: . CHAR
   58              | . DOUBLE
   59              | . FLOAT
   60              | . INT
   61              | . SHORT
   62              | . VOID
   63 expAsignacion: . IDENTIFICADOR '=' expresion ';'
   64              | . IDENTIFICADOR MAS_IGUAL expresion ';'
   65              | . IDENTIFICADOR MENOS_IGUAL expresion ';'
   66              | . IDENTIFICADOR POR_IGUAL expresion ';'
   67 expresion: . expresion OR expresion
   68          | . expresion AND expresion
   69          | . expresion MAYORIGUAL expresion
   70          | . expresion '>' expresion
   71          | . expresion MENORIGUAL expresion
   72          | . expresion '<' expresion
   73          | . expresion DESIGUALDAD expresion
   74          | . expresion '+' expresion
   75          | . expresion '-' expresion
   76          | . expresion '*' expresion
   77          | . expresion '/' expresion
   78          | . expresion '^' expresion
   79          | . expresion '%' expresion
   80          | . expPrimaria
   81 expPrimaria: . CONST_DEC
   82            | . CONST_OCT
   83            | . CONST_HEX
   84            | . CONST_REAL
   85            | . CONST_CARACTER
   86            | . LITERAL_CADENA
   87            | . IDENTIFICADOR '(' listaArgumentos ')'
   88            | . IDENTIFICADOR
   89            | . '(' expresion ')'
   93 caracterDeCorte: . ';'
   94                | . '\n'

    $end            shift, and go to state 2
    error           shift, and go to state 3
    LITERAL_CADENA  shift, and go to state 4
    CONST_CARACTER  shift, and go to state 5
    CONST_REAL      shift, and go to state 6
    CONST_HEX       shift, and go to state 7
    CONST_OCT       shift, and go to state 8
    CONST_DEC       shift, and go to state 9
    CHAR            shift, and go to state 10
    DOUBLE          shift, and go to state 11
    FLOAT           shift, and go to state 12
    INT             shift, and go to state 13
    LONG            shift, and go to state 14
    SHORT           shift, and go to state 15
    VOID            shift, and go to state 16
    IF              shift, and go to state 17
    WHILE           shift, and go to state 18
    DO              shift, and go to state 19
    FOR             shift, and go to state 20
    BREAK           shift, and go to state 21
    RETURN          shift, and go to state 22
    GOTO            shift, and go to state 23
    CONTINUE        shift, and go to state 24
    IDENTIFICADOR   shift, and go to state 25
    '\n'            shift, and go to state 26
    '{'             shift, and go to state 27
    ';'             shift, and go to state 28
    '('             shift, and go to state 29

    $end            [reduce using rule 6 (sentencia)]
    error           [reduce using rule 6 (sentencia)]
    LITERAL_CADENA  [reduce using rule 6 (sentencia)]
    CONST_CARACTER  [reduce using rule 6 (sentencia)]
    CONST_REAL      [reduce using rule 6 (sentencia)]
    CONST_HEX       [reduce using rule 6 (sentencia)]
    CONST_OCT       [reduce using rule 6 (sentencia)]
    CONST_DEC       [reduce using rule 6 (sentencia)]
    CHAR            [reduce using rule 6 (sentencia)]
    DOUBLE          [reduce using rule 6 (sentencia)]
    FLOAT           [reduce using rule 6 (sentencia)]
    INT             [reduce using rule 6 (sentencia)]
    LONG            [reduce using rule 6 (sentencia)]
    SHORT           [reduce using rule 6 (sentencia)]
    VOID            [reduce using rule 6 (sentencia)]
    IF              [reduce using rule 6 (sentencia)]
    WHILE           [reduce using rule 6 (sentencia)]
    DO              [reduce using rule 6 (sentencia)]
    FOR             [reduce using rule 6 (sentencia)]
    BREAK           [reduce using rule 6 (sentencia)]
    RETURN          [reduce using rule 6 (sentencia)]
    GOTO            [reduce using rule 6 (sentencia)]
    CONTINUE        [reduce using rule 6 (sentencia)]
    IDENTIFICADOR   [reduce using rule 6 (sentencia)]
    '\n'            [reduce using rule 6 (sentencia)]
    '{'             [reduce using rule 6 (sentencia)]
    ';'             [reduce using rule 6 (sentencia)]
    '('             [reduce using rule 6 (sentencia)]

    line                   go to state 30
    sentencia              go to state 31
    sentCompuesta          go to state 32
    sentExpresion          go to state 33
    sentSeleccion          go to state 34
    sentIteracion          go to state 35
    sentSalto              go to state 36
    declaracion            go to state 37
    declaracionVarSimples  go to state 38
    tipoDeDato             go to state 39
    definicionFuncion      go to state 40
    tipoDeRetorno          go to state 41
    expAsignacion          go to state 42
    expresion              go to state 43
    expPrimaria            go to state 44
    caracterDeCorte        go to state 45


State 2

    0 $accept: input $end .

    $default  accept


State 3

   15 sentencia: error .  [$end, error, LITERAL_CADENA, CONST_CARACTER, CONST_REAL, CONST_HEX, CONST_OCT, CONST_DEC, CHAR, DOUBLE, FLOAT, INT, LONG, SHORT, VOID, IF, ELSE, WHILE, DO, FOR, BREAK, RETURN, GOTO, CONTINUE, IDENTIFICADOR, '\n', '{', '}', ';', '(']
   37 declaracionVarSimples: error . caracterDeCorte
   93 caracterDeCorte: . ';'
   94                | . '\n'

    '\n'  shift, and go to state 46
    ';'   shift, and go to state 28

    '\n'      [reduce using rule 15 (sentencia)]
    ';'       [reduce using rule 15 (sentencia)]
    $default  reduce using rule 15 (sentencia)

    caracterDeCorte  go to state 47


State 4

   86 expPrimaria: LITERAL_CADENA .

    $default  reduce using rule 86 (expPrimaria)


State 5

   85 expPrimaria: CONST_CARACTER .

    $default  reduce using rule 85 (expPrimaria)


State 6

   84 expPrimaria: CONST_REAL .

    $default  reduce using rule 84 (expPrimaria)


State 7

   83 expPrimaria: CONST_HEX .

    $default  reduce using rule 83 (expPrimaria)


State 8

   82 expPrimaria: CONST_OCT .

    $default  reduce using rule 82 (expPrimaria)


State 9

   81 expPrimaria: CONST_DEC .

    $default  reduce using rule 81 (expPrimaria)


State 10

   38 tipoDeDato: CHAR .  [error, IDENTIFICADOR]
   57 tipoDeRetorno: CHAR .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 38 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 57 (tipoDeRetorno)]
    $default       reduce using rule 38 (tipoDeDato)


State 11

   39 tipoDeDato: DOUBLE .  [error, IDENTIFICADOR]
   58 tipoDeRetorno: DOUBLE .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 39 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 58 (tipoDeRetorno)]
    $default       reduce using rule 39 (tipoDeDato)


State 12

   40 tipoDeDato: FLOAT .  [error, IDENTIFICADOR]
   59 tipoDeRetorno: FLOAT .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 40 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 59 (tipoDeRetorno)]
    $default       reduce using rule 40 (tipoDeDato)


State 13

   41 tipoDeDato: INT .  [error, IDENTIFICADOR]
   60 tipoDeRetorno: INT .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 41 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 60 (tipoDeRetorno)]
    $default       reduce using rule 41 (tipoDeDato)


State 14

   42 tipoDeDato: LONG .

    $default  reduce using rule 42 (tipoDeDato)


State 15

   43 tipoDeDato: SHORT .  [error, IDENTIFICADOR]
   61 tipoDeRetorno: SHORT .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 43 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 61 (tipoDeRetorno)]
    $default       reduce using rule 43 (tipoDeDato)


State 16

   62 tipoDeRetorno: VOID .

    $default  reduce using rule 62 (tipoDeRetorno)


State 17

   25 sentSeleccion: IF . '(' expresion ')' sentencia
   26              | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  shift, and go to state 48


State 18

   27 sentIteracion: WHILE . '(' expresion ')' sentencia

    '('  shift, and go to state 49


State 19
